@@ -1,1 +1,0 @@
-No documentation found for "%SWAKS_COMMAND%".
