@@ -30,6 +30,7 @@ open(I, "<$home/swaks") || die "can't read from $home/swaks\n";
 while (<I>) {
   # build_version("DEVRELEASE"
   s|build_version\("DEVRELEASE"|build_version("$release"|g;
+  last if (/^### This is the end of released code/);
   print O;
 }
 close(I);
